--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-restaurant-page",
+  "name": "project-page",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,26 +9,28 @@
     "build": "webpack"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Swhag/Project-Restaurant-Page.git"
+    "type": "git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Swhag/Project-Restaurant-Page/issues"
-  },
-  "homepage": "https://github.com/Swhag/Project-Restaurant-Page#readme",
   "devDependencies": {
-    "css-loader": "^6.7.1",
+    "css-loader": "^6.7.2",
+    "eslint": "^8.27.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.7.1",
     "style-loader": "^3.3.1",
-    "webpack": "^5.74.0",
+    "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
+    "date-fns": "^2.29.3",
     "url-loader": "^4.1.1"
   }
 }
