--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
     "watch": "webpack --watch",
-    "build": "webpack"
+    "start": "webpack-dev-server --output-path=/dist/"
   },
   "repository": {
     "type": "git"
@@ -15,6 +16,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/core": "^7.20.2",
+    "babel-loader": "^9.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.20.2",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/runtime": "^7.20.1",
     "css-loader": "^6.7.2",
     "eslint": "^8.27.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -27,7 +36,8 @@
     "prettier": "^2.7.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "date-fns": "^2.29.3",
