--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest --coverage",
     "build": "webpack",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server --output-path=/dist/"
+    "start": "webpack-dev-server --output-path=/dist/",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git"
